# too-long-read-later

./: .dockerignore  .gitignore  .gitmodules  Makefile  README.md  dev-requirements.txt  requirements.txt  requirements_extras.txt  schema.sql  setup.cfg
containers/: Dockerfile  Dockerfile_scraper  Dockerfile_sender  Dockerfile_server
src/tlrl/: api.py  cli.py  db.py  scraper.py  send.py  sender.py  summary.py  utils.py
src/tlrl/static/: confirmation.html  feedback.html  index.html  subscription_confirmed.html  unsubscribed.html
src/yesterdays_hackernews/: api.py  app.py  cli.py  scraper.py  send.py  sender.py  server.py  utils.py
static/: index.html
templates/: email_template.html  email_template_no_inline.html
tests/: test_post.html  test_scraper_sender.py  test_server.py
too_long_read_later/: Makefile  README.md  background.js  manifest.json  popup.html  popup.js
too_long_read_later_extension/: Makefile  README.md  background.js  manifest.json
