[metadata]
name = sdp
version = 1.0.0
description = 'yesterdays_hackernews'

[options]
python_requires = >=3.10
package_dir =
  =src
packages = find_namespace:
include_package_data = true
install_requires =
  beautifulsoup4
  click
  css_inline
  Jinja2
  markdown
  pandas
  prefect==1.*
  requests

[options.packages.find]
where = src

[options.extras_require]
python-readability =
  chardet
  cssselect
  lxml