[metadata]
name = sdp
version = 1.0.0
description = 'too_long_read_later'

[options]
python_requires = >=3.10
package_dir =
  =src
packages = find_namespace:
include_package_data = true
install_requires =
  beautifulsoup4
  click
  css_inline
  flask
  gunicorn
  Jinja2
  markdown
  pandas
  prefect==1.*
  requests
  chardet
  cssselect
  lxml

[options.packages.find]
where = src
