[metadata]
name = tlrl
version = 1.0.0
description = 'Too long. Read later.'

[options]
python_requires = >=3.10
package_dir =
  =src
packages = find_namespace:
include_package_data = true
install_requires =
  beautifulsoup4
  chardet
  click
  css_inline
  cssselect
  fake-useragent
  flask
  gunicorn
  Jinja2
  lxml
  markdown
  openai
  pandas
  prefect==1.*
  requests
  tiktoken

[options.packages.find]
where = src
